--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
                                 </tr>
                                 <tr>
                                     <td class="align-middle w-25">Cu reședința în</td>
-                                    <td colspan="3" class="align-middle"><input type="text" class="form-control"
-                                                                                v-model="residence" required/></td>
+                                    <td colspan="3" class="align-middle">
+                                        <input type="text" class="form-control" v-model="residence" required/>
+                                        <a href="javascript:void(0);" v-on:click="copyInfoFromResidence" class="small">Copiaza
+                                            datele de la domiciliu</a>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td class="align-middle w-25">Născut/născută în data de</td>
@@ -94,8 +97,10 @@
                                 <tr>
                                     <td colspan="2">
                                         <h6 class="font-weight-bold">
-                                            Declar  pe  proprie  răspundere,  cunoscând  prevederile  articolului  326  din  Codul  Penal
-                                            privind  falsul  în declarații, că mă deplasez în afara locuinței, din următorul motiv:
+                                            Declar pe proprie răspundere, cunoscând prevederile articolului 326 din
+                                            Codul Penal
+                                            privind falsul în declarații, că mă deplasez în afara locuinței, din
+                                            următorul motiv:
                                         </h6>
                                     </td>
                                 </tr>
@@ -331,7 +336,8 @@
                                             <input class="form-check-input" type="checkbox" value="varianta_16"
                                                    v-model="reasons" id="defaultCheck16">
                                             <label class="form-check-label" for="defaultCheck16">
-                                                p) deplasări ale persoanelor pentru administrare de vaccin împotriva SARS-CoV-2.
+                                                p) deplasări ale persoanelor pentru administrare de vaccin împotriva
+                                                SARS-CoV-2.
                                             </label>
                                         </div>
                                     </td>
@@ -467,8 +473,9 @@
                                     <td class="text-center">
                                         <canvas width="350" height="200" ref="signature"
                                                 style="border: 1px solid #e5e5e5"></canvas>
-                                        <br />
-                                        <a href="javascript:void(0);" class="small" v-on:click="resetSignature">Reseteaza semnătura</a>
+                                        <br/>
+                                        <a href="javascript:void(0);" class="small" v-on:click="resetSignature">Reseteaza
+                                            semnătura</a>
                                     </td>
                                 </tr>
                                 </tbody>
@@ -768,6 +775,9 @@
                 this.city = userData.city;
                 // this.signaturePad.fromDataURL('data:image/png;base64,' + userData.canvas);
             },
+            copyInfoFromResidence: function () {
+                this.residence = this.resident;
+            },
             download: function () {
                 this.generate(this.getPreparedTemplateString());
             },
@@ -781,7 +791,7 @@
                 this.save();
                 this.download();
             },
-            resetSignature: function() {
+            resetSignature: function () {
                 this.signaturePad.clear();
             },
             save: function () {
