Removed resizer method

--- a/index.html
+++ b/index.html
@@ -869,11 +869,11 @@
 
             // Resize handler
             resizeHandler: function () {
-                let ratio = Math.max(window.devicePixelRatio || 1, 1);
-
-                this.canvas.width = this.canvas.offsetWidth * ratio;
-                this.canvas.height = this.canvas.offsetHeight * ratio;
-                this.canvas.getContext("2d").scale(ratio, ratio);
+                // let ratio = Math.max(window.devicePixelRatio || 1, 1);
+                //
+                // this.canvas.width = this.canvas.offsetWidth * ratio;
+                // this.canvas.height = this.canvas.offsetHeight * ratio;
+                // this.canvas.getContext("2d").scale(ratio, ratio);
             }
         },
         mounted() {
